# PromptVault

./: .gitignore  .gitleaks.toml  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  working.md
docs/: CLI.md  PROMPT_BEST_PRACTICES.md  SOURCE_DISCOVERY.md
research/: external_sources.json  prompt-improvement-strategy-2026-06-03.md  source-scorecard.md
scripts/: browser-bridge-isolated-qa.mjs
src/: App.css  App.tsx  actionLocks.ts  analysisEmptyState.ts  browserBridge.ts  dateDisplay.ts  displayRedaction.ts  errorDisplay.ts  importEvents.ts  importProgress.ts  importQueue.ts  importRefreshState.ts  improvementSelection.ts  noticeA11y.ts  panelRefresh.ts  planStatus.ts  previewMode.ts  promptEmptyState.ts  promptRowA11y.ts  promptVaultApi.ts  qualityGaps.ts  qualityLabels.ts  reviewQueueFilters.ts  riskLabels.ts  scanLimit.ts  scanScope.ts  scanStatus.ts  selection.ts  sourceStatusA11y.ts  storedFacetStatus.ts  storedFilters.ts  storedLoadStatus.ts  textListKey.ts  topActionLabels.ts  types.ts  workLogCoverageFilters.ts  workLogExtractionItemGroups.ts  workLogPreviewFilters.ts  workManagementOverview.ts  workSourceFileRoles.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-cli/: Cargo.toml
src-tauri-cli/src/: main.rs
src-tauri/src/: lib.rs  main.rs
tests/: actionLocks.test.ts  analysisEmptyState.test.ts  browserBridge.test.ts  errorDisplay.test.ts  importEvents.test.ts  importProgress.test.ts  importQueue.test.ts  importRefreshState.test.ts  improvementSelection.test.ts  noticeA11y.test.ts  panelRefresh.test.ts  planStatus.test.ts  previewMode.test.ts  promptEmptyState.test.ts  promptRowA11y.test.ts  promptVaultApi.test.ts  qualityGaps.test.ts  qualityLabels.test.ts  (+19 more)
(+221 files in other folders)
