[package]
name = "promptvault-cli"
version = "0.1.0"
description = "PromptVault local development and QA command line interface"
authors = ["wj"]
edition = "2021"

[dependencies]
promptvault_lib = { package = "promptvault", path = "../src-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
